# backend/docs/swagger.json
@@ -24,7 +24,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/restapi.AuthDto"
+                            "$ref": "#/definitions/restapi.AuthRequest"
                         }
                     }
                 ],
@@ -32,7 +32,25 @@
                     "200": {
                         "description": "true",
                         "schema": {
-                            "type": "boolean"
+                            "$ref": "#/definitions/restapi.AuthResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "false",
+                        "schema": {
+                            "$ref": "#/definitions/restapi.AuthResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "false",
+                        "schema": {
+                            "$ref": "#/definitions/restapi.AuthResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "false",
+                        "schema": {
+                            "$ref": "#/definitions/restapi.AuthResponse"
                         }
                     }
                 }
@@ -53,9 +71,9 @@
                 "summary": "Get all users",
                 "responses": {
                     "200": {
-                        "description": "true",
+                        "description": "OK",
                         "schema": {
-                            "type": "boolean"
+                            "$ref": "#/definitions/restapi.UserListResponse"
                         }
                     }
                 }
@@ -63,7 +81,7 @@
         }
     },
     "definitions": {
-        "restapi.AuthDto": {
+        "restapi.AuthRequest": {
             "type": "object",
             "properties": {
                 "email": {
@@ -71,6 +89,51 @@
                 },
                 "password": {
                     "type": "string"
+                }
+            }
+        },
+        "restapi.AuthResponse": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "error_message": {
+                    "type": "string"
+                },
+                "status_code": {
+                    "type": "integer"
+                },
+                "token": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "restapi.UserListResponse": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string",
+                    "example": "john.doe@gmail.com"
+                },
+                "firstName": {
+                    "type": "string",
+                    "example": "John"
+                },
+                "gsm": {
+                    "type": "string",
+                    "example": "555-555-5555"
+                },
+                "lastLoginDate": {
+                    "type": "string",
+                    "example": "2021-01-01T00:00:00Z"
+                },
+                "lastName": {
+                    "type": "string",
+                    "example": "Doe"
                 }
             }
         }
