# backend/pkg/restapi/controllers/users.go
@@ -4,11 +4,15 @@ import (
 	"encoding/json"
 	"immortality/pkg/users"
 	"net/http"
+	"time"
 )
 
-type AuthDto struct {
-	Email    string `json:"email"`
-	Password string `json:"password"`
+type UserListResponse struct {
+	Email         string     `json:"email" example:"john.doe@gmail.com"`
+	Gsm           string     `json:"gsm" example:"555-555-5555"`
+	FirstName     string     `json:"firstName" example:"John"`
+	LastName      string     `json:"lastName" example:"Doe"`
+	LastLoginDate *time.Time `json:"lastLoginDate" example:"2021-01-01T00:00:00Z"`
 }
 
 // / Index godoc
@@ -17,7 +21,7 @@ type AuthDto struct {
 // @Tags users
 // @Accept  json
 // @Produce  json
-// @Success 200 {object} bool "true"
+// @Success 200 {object} UserListResponse
 // @Router /users [get]
 func UserList(w http.ResponseWriter, _ *http.Request) {
 
@@ -30,41 +34,4 @@ func UserList(w http.ResponseWriter, _ *http.Request) {
 	json, _ := json.Marshal(res)
 	w.Write([]byte(json))
 
-}
-
-// / Register godoc
-// @Summary auth for token
-// @Description auth for token
-// @Tags auth
-// @Accept  json
-// @Produce  json
-// @Param request body AuthDto true "request"
-// @Success 200 {object} bool "true"
-// @Router /auth [post]
-func Auth(w http.ResponseWriter, r *http.Request) {
-
-	var model AuthDto
-
-	decoder := json.NewDecoder(r.Body)
-	decoder.Decode(&model)
-
-	userStore := users.UserStore{}
-	userStore.Connect()
-
-	res, _ := userStore.VerifyCredential(model.Email, model.Password)
-	user, _ := userStore.GetUserByEmail(model.Email)
-
-	w.Header().Set("Content-Type", "application/json")
-	if res {
-		tokenres, _ := userStore.GenerateToken(user)
-		if tokenres {
-			w.WriteHeader(http.StatusOK)
-		} else {
-			w.WriteHeader(http.StatusInternalServerError)
-		}
-	} else {
-		w.WriteHeader(http.StatusUnauthorized)
-	}
-	json, _ := json.Marshal(res)
-	w.Write([]byte(json))
 }
